--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "gulp-watch": "^4.3.5",
     "gulp-zip": "^3.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-install": "^0.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
